# Gik

./: .env.example  .gitignore  AGENTS.md  ANTIGRAVITY.md  CHANGELOG.md  Cargo.toml  DISTRIBUTION.md  GEMINI.md  LICENSE-APACHE  LICENSE-MIT  README.md  dist-workspace.toml  release-plz.toml  repro.rs
.github/workflows/: release-plz.yml  release.yml  tagger.yml
docs/superpowers/plans/: 2026-06-13-gik-foundation.md
docs/superpowers/specs/: 2026-06-13-gik-vcs-design.md
src/: cli.rs  config.rs  error.rs  main.rs  models.rs
src/commands/: commit.rs  diff.rs  init.rs  log.rs  mod.rs  show.rs  stage.rs  status.rs  test_utils.rs  tests.rs  undo.rs  unstage.rs  update.rs
src/commands/branch/: mod.rs  tests.rs
src/commands/cat_file/: mod.rs
src/commands/checkout/: mod.rs  tests.rs
src/commands/clone/: mod.rs
src/commands/commit/: mod.rs  tests.rs
src/commands/config/: mod.rs  tests.rs
src/commands/diff/: mod.rs  tests.rs
src/commands/init/: mod.rs  tests.rs
src/commands/log/: graph.rs  mod.rs  tests.rs
src/commands/merge/: mod.rs  tests.rs
src/commands/pull/: mod.rs
src/commands/push/: mod.rs
src/commands/restore/: mod.rs  tests.rs
src/commands/stage/: mod.rs  tests.rs
src/commands/status/: mod.rs  tests.rs
src/commands/undo/: mod.rs  tests.rs
src/commands/update/: mod.rs
src/core/: clone_ops.rs  commit_ops.rs  fetch_ops.rs  graph.rs  hash.rs  ignore.rs  mod.rs  models.rs  objects.rs  storage.rs  utils.rs  workspace.rs
src/core/merge/: analyzer.rs  mod.rs  strategy.rs
src/core/merge/text/: mod.rs  tests.rs
src/core/network/: client.rs  mod.rs  packfile_decode.rs
src/core/objects/: blob.rs  commit.rs  mod.rs  tests.rs  tree.rs
src/core/pack/: discovery.rs  encoder.rs  mod.rs  utils.rs
src/core/storage/: mod.rs  repository.rs  services.rs  tests.rs
src/core/storage/services/: commit.rs  config.rs  index.rs  mod.rs  object.rs  refs.rs  session.rs  undo.rs
