[package]
name = "gik"
version = "0.1.9"
edition = "2021"
description = "A Git-like transactional version control system written in Rust"
repository = "https://github.com/Kyryloloshka/Gik"
license = "MIT OR Apache-2.0"
authors = ["Gik Developer"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
redb = "1.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
sha1 = "0.10"
flate2 = "1.0"
thiserror = "1.0"
chrono = "0.4"
hex = "0.4"

[dev-dependencies]
tempfile = "3.8"

[workspace]
members = ["."]

# Config for cargo-dist (MUST BE IN workspace.metadata)
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (0.0.0 to use latest)
cargo-dist-version = "0.19.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each release
installers = ["shell", "powershell"]
# Target platforms to build binaries for
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "aarch64-apple-darwin", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Allow the CI workflow to be 'dirty' (manually edited)
allow-dirty = ["ci"]

[profile.dist]
inherits = "release"
lto = "thin"
debug = false

