[package]
name = "gik"
version = "0.1.23"
edition = "2021"
description = "A Git-like transactional version control system written in Rust"
repository = "https://github.com/Kyryloloshka/Gik"
license = "MIT OR Apache-2.0"
authors = ["Gik Developer"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
redb = "1.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
sha1 = "0.10"
flate2 = "1.0"
thiserror = "1.0"
chrono = "0.4"
hex = "0.4"
self_update = { version = "0.41", features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate"] }
glob = "0.3"

[dev-dependencies]
tempfile = "3.8"

[package.metadata.dist]
# Package-specific distribution settings
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "aarch64-apple-darwin", "x86_64-pc-windows-msvc"]
installers = ["shell", "powershell"]

[workspace]
members = ["."]

[workspace.metadata.dist]
# Global CI/Distribution settings
cargo-dist-version = "0.19.1"
ci = ["github"]
allow-dirty = ["ci"]

[profile.dist]
inherits = "release"
lto = "thin"
debug = false
